--- a/style.css
+++ b/style.css
@@ -2,4 +2,86 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper {
+    display: flex;
+
+    justify-content: center;
+    min-height: 100vh;
+    width: 100%;
+
+    background-color: blueviolet;
+}
+
+.contacts-block {
+    width: 30%;
+    background-color: #e9eae9;
+}
+
+.chat-block {
+    width: 70%;
+    background-color: bisque;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.input-container {
+    display: flex;
+    justify-content: space-between;
+    background-color: #e9eae9;
+}
+
+.message-container {
+    background-image: url(img/mine.jpg);
+    height: 100%;
+}
+
+.header {
+    background-color: #e9eae9;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.info-container {
+    display: flex;
+}
+
+img {
+    border-radius: 50%;
+    height: 50px;
+}
+
+.fa-solid {
+    font-size: 1rem;
+}
+
+.search-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.conversation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
 }
