--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ p {
 
 .contacts-block {
     width: 30%;
-    background-color: #e9eae9;
+    background-color: #ffffff;
 }
 
 .chat-block {
@@ -81,7 +81,28 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
 
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
+.active {
+    background-color: #e9ebeb;
+}
+
+.single-message {
+    background-color: rgb(82, 160, 26);
+
+    margin: 10px;
+}
+
+h3 {
+    font-size: 1rem;
+    font-weight: 300;
+}
+
+.sent-message {
+    background-color: aqua;
+    text-align: right;
+}
+.received-message {
+    background-color: rgb(255, 98, 0);
+    text-align: left;
 }
