--- a/style.css
+++ b/style.css
@@ -105,6 +105,10 @@ img {
     border-bottom: 0.5px solid rgb(219, 218, 218);
 }
 
+.conversation:hover {
+    background-color: #e9ebeb;
+}
+
 .active {
     background-color: #e9ebeb;
 }
@@ -175,11 +179,28 @@ h1 {
     gap: 30px;
 }
 
+.info-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .input-container input {
-    width: 80%;
+    width: 90%;
     height: 30px;
     border: none;
     border-radius: 0.2rem;
+}
+
+.fa-microphone {
+    width: 5%;
+    text-align: center;
+    font-size: 1.3rem;
+}
+.fa-face-smile {
+    width: 5%;
+    text-align: center;
+    font-size: 1.3rem;
 }
 
 .time-container h6 {
@@ -251,11 +272,18 @@ h1 {
 }
 
 .search-container .fa-solid {
-    width: 5%;
+    width: 15%;
     text-align: center;
     margin: 10px;
 }
 
 .fa-solid {
     color: rgb(113, 111, 111);
+    font-size: 1.3rem;
+}
+
+.icon-container * {
+    margin: 0px 10px;
+    color: rgb(113, 111, 111);
+    font-size: 1.3rem;
 }
